--- a/vreasy/application/layouts/scripts/layout.phtml
+++ b/vreasy/application/layouts/scripts/layout.phtml
@@ -11,6 +11,7 @@
     <?= $this->headLink()?>
     <link href="/css/vreasy/fuelux.css" rel="stylesheet" />
     <link type="text/css" rel='stylesheet' href='/css/vreasy/vreasy.css'>
+    <script type="text/javascript" src="//static.twilio.com/libs/twiliojs/1.1/twilio.min.js"></script>
     <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="/bower_components/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -33,7 +34,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li>
-                    <a href="/tasks">Tasks</a>
+                    <a href="/">Tasks</a>
                 </li>
             </ul>
             <ul class="nav pull-right">
